[#155] Removed duplicated VM options